# src/user/types/index.ts
@@ -1,0 +1,8 @@
+export enum userStatus {
+  // eslint-disable-next-line no-unused-vars
+  pending = "pending",
+  // eslint-disable-next-line no-unused-vars
+  active = "active",
+  // eslint-disable-next-line no-unused-vars
+  blocked = "blocked",
+}
